bugfix: Exception output invisible in light mode

--- a/assets/css/run.css
+++ b/assets/css/run.css
@@ -73,7 +73,7 @@
         font-weight: normal;
         /* font-size: 14px !important;
         line-height: 14px; */
-        color: white;
+        color: var(--defaultPrintColor);
         letter-spacing: 0px;
     }
 
